    Добавил загрузку информации об игре через ajax
    Добавил проверку регистрации пользователя через ajax
    Релизовал загрузку списка юзеров через ajax, от jsp не остается и следа! Подключил новую либину, для работы с html темплейтами через jQuery
    Замахнулся на форму регистрации, но то еще тот кусок. Оставил на потом. Хватит уже, я сегодня хотел только померджить в мастер немного :) Зато чуть скрипты поправил, была бага с либами
    Сделал так, чтобы не рифрешислась страничка при добавлении нового пользователя, а только обновлялся контент
    Сделал, чтобы удаление и добавление пользователя не приводило к перезагрезке всей борды
    Админка теперь не сохраняет в url браузера последнее действие
    Добавил возможность менять набор спрайтов как тему игры
    Зарелизил версию 1.0.12
2016-09-22
    Реализовал возможность в клиенте работать с несколькими слоями борды
    Зарелизил версию 1.0.13
2016-09-30
    Исправил глюк с /n при построении борды
    Сделал так, чтобы состояние борды приходило как полноценный JSON а не JSON строки в другом JSON - из за чего приходилось парсить дополнительно на клиенте.
    Сделал более читабельное сохранение дат в таблицы обоих типов (PostgreSQL и SQLite), что привело к тому что чаты не сохраняются многократно (пофиксил багу)
    Теперь прорисовка имен так же правильно отображается не только в однопользовательской, многопользовательской, но и в миксованной игре.
    Исправил загрузку контекста, что порой приводило к белому экрану
    Сделал возможным изменять стили рисования подписи к игроку. Некрасиво, но пока так.
    Зарелизил версию 1.0.14
    Сделал так, чтобы имена отрисовывались в нужном порядке, причем можно было указывать хочу ли я выводить все имена или только текущий
2016-10-12,13
    Добавил документацию
    Зарелизил версию 1.0.15
    Сделал чтобы джойстик всегда работал и можно было по хоткею его включать и выключать
    Добавил кнопку перехода на лидерборд страничку
2016-10-14
    Зарелизил v1.0.16