@@ -30,7 +30,7 @@ import com.codenjoy.dojo.services.CharElements;
  */
 enum Elements implements CharElements {
 
-    ONE('1'), TWO('2'), THREE('3'), FOUR('4'), NONE(' ');
+    ONE('1'), TWO('2'), THREE('3'), FOUR('4'), FIVE('5'), SIX('6'), NONE(' ');
 
     final char ch;
 
