@@ -111,3 +111,5 @@
     Добавил кнопку перехода на лидерборд страничку
 2016-10-14
     Зарелизил v1.0.16
+2016-10-30
+    Исправил AbstractBoard так что теперь она ищет на всех леерах после PullRequest, добавил тестов
